Letter spacing fix
- letter spacing in info panel increased
- info panel width 100% for mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -125,6 +125,7 @@ html {
 .album .image-container .info p{
   font-size: 1.1em;
   font-weight: 500;
+  letter-spacing: 0.05em;
 }
 .navigation{
   position: absolute;
@@ -216,6 +217,8 @@ html {
   }
   .album .image-container .info {
     max-width: none;
+    width: 100%;
+    border-radius: 0;
     margin-top: 0;
     margin-left: 0;
   }
